feat: update, delete product., product details
